--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 pyhive[hive_pure_sasl]~=0.7.0
-requests>=2.28.1
+requests>=2.32.2
 
 pyodbc~=4.0.39 --no-binary pyodbc
 sqlparams>=3.0.0
-thrift>=0.13.0
+thrift>=0.11.0,<0.17.0
 pyspark>=3.0.0,<4.0.0
 sqlparse>=0.4.2 # not directly required, pinned by Snyk to avoid a vulnerability
 
 types-PyYAML
 types-python-dateutil
-websockets
