--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyhive[hive_pure_sasl]~=0.7.0
 requests==2.32.0
 
 sqlparams>=3.0.0
-thrift>=0.11.0,<0.17.0
+thrift>=0.20.0
 sqlparse>=0.5.0
 setuptools==70.0.0
 types-PyYAML
