Change to watsonx-spark plugin name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -197,10 +197,10 @@ jobs:
           find ./dist/*.whl -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/
       - name: Check wheel distributions
         run: |
-          python -c "import dbt.adapters.spark"
+          python -c "import dbt.adapters.watsonx_spark"
       - name: Install source distributions
         run: |
           find ./dist/*.gz -maxdepth 1 -type f | xargs python -m pip install --force-reinstall --find-links=dist/
       - name: Check source distributions
         run: |
-          python -c "import dbt.adapters.spark"
+          python -c "import dbt.adapters.watsonx_spark"
