--- a/.github/workflows/release-internal.yml
+++ b/.github/workflows/release-internal.yml
@@ -27,7 +27,7 @@ on:
       package_test_command:
         description: "Package test command"
         type: string
-        default: "python -c \"import dbt.adapters.spark\""
+        default: "python -c \"import dbt.adapters.watsonx_spark\""
         required: true
 
 defaults:
