--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ on:
       package_test_command:
         description: "Package test command"
         type: string
-        default: "python -c \"import dbt.adapters.spark\""
+        default: "python -c \"import dbt.adapters.watsonx_spark\""
         required: true
       env_setup_script_path:
         description: "Environment setup script path"
